--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-
-    </Grid>
+    <StackPanel>
+        <TextBlock Text="{x:Bind _log}" />
+    </StackPanel>
 </Page>
